# audio_collab

./: Cargo.toml  LICENSE  README.md
src/: app_data.rs  app_event.rs  client.rs  main.rs  server.rs  ui.rs
src/client/: client_handler.rs  mod.rs
src/messages/: interchange.rs  mod.rs
src/net/: mod.rs
src/net/client/: client_connector.rs  client_handler.rs  mod.rs
src/net/messages/: interchange.rs  mod.rs  udp_frame.rs
src/net/server/: mod.rs  server_handler.rs  server_thread.rs
src/server/: mod.rs  server_handler.rs  server_thread.rs
src/ui/: chat.rs  connect.rs  connect_style.css  mod.rs
