[package]
name = "audio_collab"
version = "0.1.0"
edition = "2021"


[dependencies]
vizia = {git = "https://github.com/vizia/vizia", branch = "proxy-mouse"}
# vizia = {path = "../vizia"}
ron = "0.7"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }